Add support for agent self-testing, to confirm JVM compat